@@ -18,6 +18,7 @@ import java.util.List;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 @SpringBootTest
@@ -84,7 +85,7 @@ public class PostsControllerTest {
                 .likesCount(0)
                 .commentsCount(0)
                 .build();
-        when(postsService.getAll()).thenReturn(
+        when(postsService.getAll(any())).thenReturn(
                 List.of(postsResponse2, postsResponse1)
         );
 
@@ -92,17 +93,17 @@ public class PostsControllerTest {
         List<PostsResponse> postsResponses = postsController.getAll();
 
         // then
-        assertThat(postsResponses.get(0).getId()).isEqualTo(2L);
-        assertThat(postsResponses.get(0).getTitle()).isEqualTo("testTitle2");
-        assertThat(postsResponses.get(0).getContent()).isEqualTo("testContent2");
-        assertThat(postsResponses.get(0).getAuthor().getEmail()).isEqualTo(author.getEmail());
-        assertThat(postsResponses.get(0).getCreatedAt()).isEqualTo(post2CreatedAt);
-        assertThat(postsResponses.get(0).getModifiedAt()).isEqualTo(post2ModifiedAt);
-        assertThat(postsResponses.get(0).getIsPublic()).isEqualTo(true);
-        assertThat(postsResponses.get(0).getIsDeleted()).isEqualTo(false);
-        assertThat(postsResponses.get(0).getDeletedAt()).isNull();
-        assertThat(postsResponses.get(0).getLikesCount()).isEqualTo(0);
-        assertThat(postsResponses.get(0).getCommentsCount()).isEqualTo(0);
+        assertThat(postsResponses.getFirst().getId()).isEqualTo(2L);
+        assertThat(postsResponses.getFirst().getTitle()).isEqualTo("testTitle2");
+        assertThat(postsResponses.getFirst().getContent()).isEqualTo("testContent2");
+        assertThat(postsResponses.getFirst().getAuthor().getEmail()).isEqualTo(author.getEmail());
+        assertThat(postsResponses.getFirst().getCreatedAt()).isEqualTo(post2CreatedAt);
+        assertThat(postsResponses.getFirst().getModifiedAt()).isEqualTo(post2ModifiedAt);
+        assertThat(postsResponses.getFirst().getIsPublic()).isEqualTo(true);
+        assertThat(postsResponses.getFirst().getIsDeleted()).isEqualTo(false);
+        assertThat(postsResponses.getFirst().getDeletedAt()).isNull();
+        assertThat(postsResponses.getFirst().getLikesCount()).isEqualTo(0);
+        assertThat(postsResponses.getFirst().getCommentsCount()).isEqualTo(0);
 
         assertThat(postsResponses.get(1).getId()).isEqualTo(1L);
         assertThat(postsResponses.get(1).getTitle()).isEqualTo("testTitle");
@@ -235,13 +236,59 @@ public class PostsControllerTest {
     @Test
     public void likeDuplicate() {
         // given
-        LocalDateTime postCreatedAt = LocalDateTime.of(2022, 1, 1, 0, 0);
-        LocalDateTime postModifiedAt = LocalDateTime.of(2022, 1, 2, 0, 0);
         when(postsService.like(1L, author.getEmail())).thenThrow(new IllegalArgumentException("이미 좋아요를 누른 게시글입니다."));
 
         // when
         // then
         // throws IllegalArgumentException
         assertThrows(IllegalArgumentException.class, () -> postsController.like(1L));
+    }
+
+    @Test
+    public void unlike() {
+        // given
+        LocalDateTime postCreatedAt = LocalDateTime.of(2022, 1, 1, 0, 0);
+        LocalDateTime postModifiedAt = LocalDateTime.of(2022, 1, 2, 0, 0);
+        PostsResponse postsResponse = PostsResponse.builder()
+                .id(1L)
+                .title("testTitle")
+                .content("testContent")
+                .author(author)
+                .createdAt(postCreatedAt)
+                .modifiedAt(postModifiedAt)
+                .isPublic(true)
+                .isDeleted(false)
+                .deletedAt(null)
+                .likesCount(0)
+                .commentsCount(0)
+                .build();
+        when(postsService.unlike(1L, author.getEmail())).thenReturn(postsResponse);
+
+        // when
+        PostsResponse unlikedPostsResponse = postsController.unlike(1L);
+
+        // then
+        assertThat(unlikedPostsResponse.getId()).isEqualTo(1L);
+        assertThat(unlikedPostsResponse.getTitle()).isEqualTo("testTitle");
+        assertThat(unlikedPostsResponse.getContent()).isEqualTo("testContent");
+        assertThat(unlikedPostsResponse.getAuthor().getEmail()).isEqualTo(author.getEmail());
+        assertThat(unlikedPostsResponse.getCreatedAt()).isEqualTo(postCreatedAt);
+        assertThat(unlikedPostsResponse.getModifiedAt()).isEqualTo(postModifiedAt);
+        assertThat(unlikedPostsResponse.getIsPublic()).isEqualTo(true);
+        assertThat(unlikedPostsResponse.getIsDeleted()).isEqualTo(false);
+        assertThat(unlikedPostsResponse.getDeletedAt()).isNull();
+        assertThat(unlikedPostsResponse.getLikesCount()).isEqualTo(0);
+        assertThat(unlikedPostsResponse.getCommentsCount()).isEqualTo(0);
+    }
+
+    @Test
+    public void unlikeFail() {
+        // given
+        when(postsService.unlike(1L, author.getEmail())).thenThrow(new IllegalArgumentException("좋아요를 누르지 않은 게시글입니다."));
+
+        // when
+        // then
+        // throws IllegalArgumentException
+        assertThrows(IllegalArgumentException.class, () -> postsController.unlike(1L));
     }
 }
