@@ -62,7 +62,7 @@ public class PostsServiceTest {
     }
 
     @Test
-    public void getAll() {
+    public void getAllAnonymousUser() {
         // given
         Instant post1CreatedAt = Instant.ofEpochMilli(1640995200000L);
         Instant post1ModifiedAt = Instant.ofEpochMilli(1641081600000L);
@@ -99,19 +99,19 @@ public class PostsServiceTest {
         );
 
         // when
-        List<PostsResponse> postsResponses = postsService.getAll();
+        List<PostsResponse> postsResponses = postsService.getAll("anonymousUser");
 
         // then
-        assertThat(postsResponses.get(0).getTitle()).isEqualTo(posts2.getTitle());
-        assertThat(postsResponses.get(0).getContent()).isEqualTo(posts2.getContent());
-        assertThat(postsResponses.get(0).getAuthor().getEmail()).isEqualTo(author.getEmail());
-        assertThat(postsResponses.get(0).getCreatedAt()).isEqualTo(post2CreatedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
-        assertThat(postsResponses.get(0).getModifiedAt()).isEqualTo(post2ModifiedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
-        assertThat(postsResponses.get(0).getIsPublic()).isEqualTo(posts2.getIsPublic());
-        assertThat(postsResponses.get(0).getIsDeleted()).isEqualTo(posts2.getIsDeleted());
-        assertThat(postsResponses.get(0).getDeletedAt()).isEqualTo(posts2.getDeletedAt());
-        assertThat(postsResponses.get(0).getLikesCount()).isEqualTo(posts2.getLikesCount());
-        assertThat(postsResponses.get(0).getCommentsCount()).isEqualTo(posts2.getCommentsCount());
+        assertThat(postsResponses.getFirst().getTitle()).isEqualTo(posts2.getTitle());
+        assertThat(postsResponses.getFirst().getContent()).isEqualTo(posts2.getContent());
+        assertThat(postsResponses.getFirst().getAuthor().getEmail()).isEqualTo(author.getEmail());
+        assertThat(postsResponses.getFirst().getCreatedAt()).isEqualTo(post2CreatedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
+        assertThat(postsResponses.getFirst().getModifiedAt()).isEqualTo(post2ModifiedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
+        assertThat(postsResponses.getFirst().getIsPublic()).isEqualTo(posts2.getIsPublic());
+        assertThat(postsResponses.getFirst().getIsDeleted()).isEqualTo(posts2.getIsDeleted());
+        assertThat(postsResponses.getFirst().getDeletedAt()).isEqualTo(posts2.getDeletedAt());
+        assertThat(postsResponses.getFirst().getLikesCount()).isEqualTo(posts2.getLikesCount());
+        assertThat(postsResponses.getFirst().getCommentsCount()).isEqualTo(posts2.getCommentsCount());
 
         assertThat(postsResponses.get(1).getTitle()).isEqualTo(posts1.getTitle());
         assertThat(postsResponses.get(1).getContent()).isEqualTo(posts1.getContent());
@@ -123,6 +123,76 @@ public class PostsServiceTest {
         assertThat(postsResponses.get(1).getDeletedAt()).isEqualTo(posts1.getDeletedAt());
         assertThat(postsResponses.get(1).getLikesCount()).isEqualTo(posts1.getLikesCount());
         assertThat(postsResponses.get(1).getCommentsCount()).isEqualTo(posts1.getCommentsCount());
+    }
+
+    @Test
+    public void getAllNormalUser() {
+        // given
+        Instant post1CreatedAt = Instant.ofEpochMilli(1640995200000L);
+        Instant post1ModifiedAt = Instant.ofEpochMilli(1641081600000L);
+        Instant post2CreatedAt = Instant.ofEpochMilli(1642075200000L);
+        Instant post2ModifiedAt = Instant.ofEpochMilli(1642161600000L);
+        Posts posts1 = Posts.builder()
+                .id(1L)
+                .title("testTitle")
+                .content("testContent")
+                .author(author)
+                .createdAt(post1CreatedAt)
+                .modifiedAt(post1ModifiedAt)
+                .isPublic(true)
+                .isDeleted(false)
+                .deletedAt(null)
+                .likesCount(0)
+                .commentsCount(0)
+                .build();
+        Posts posts2 = Posts.builder()
+                .id(2L)
+                .title("testTitle2")
+                .content("testContent2")
+                .author(author)
+                .createdAt(post2CreatedAt)
+                .modifiedAt(post2ModifiedAt)
+                .isPublic(true)
+                .isDeleted(false)
+                .deletedAt(null)
+                .likesCount(0)
+                .commentsCount(0)
+                .build();
+        when(postsRepository.findAllByOrderByCreatedAtDescWithLiked(1L)).thenReturn(
+                List.of(
+                        List.of(posts2, false).toArray(),
+                        List.of(posts1, true).toArray()
+                )
+        );
+        when(usersRepository.findByEmail(author.getEmail())).thenReturn(Optional.of(author));
+
+        // when
+        List<PostsResponse> postsResponses = postsService.getAll(author.getEmail());
+
+        // then
+        assertThat(postsResponses.getFirst().getTitle()).isEqualTo(posts2.getTitle());
+        assertThat(postsResponses.getFirst().getContent()).isEqualTo(posts2.getContent());
+        assertThat(postsResponses.getFirst().getAuthor().getEmail()).isEqualTo(author.getEmail());
+        assertThat(postsResponses.getFirst().getCreatedAt()).isEqualTo(post2CreatedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
+        assertThat(postsResponses.getFirst().getModifiedAt()).isEqualTo(post2ModifiedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
+        assertThat(postsResponses.getFirst().getIsPublic()).isEqualTo(posts2.getIsPublic());
+        assertThat(postsResponses.getFirst().getIsDeleted()).isEqualTo(posts2.getIsDeleted());
+        assertThat(postsResponses.getFirst().getDeletedAt()).isEqualTo(posts2.getDeletedAt());
+        assertThat(postsResponses.getFirst().getLikesCount()).isEqualTo(posts2.getLikesCount());
+        assertThat(postsResponses.getFirst().getCommentsCount()).isEqualTo(posts2.getCommentsCount());
+        assertThat(postsResponses.getFirst().getIsLiked()).isFalse();
+
+        assertThat(postsResponses.get(1).getTitle()).isEqualTo(posts1.getTitle());
+        assertThat(postsResponses.get(1).getContent()).isEqualTo(posts1.getContent());
+        assertThat(postsResponses.get(1).getAuthor().getEmail()).isEqualTo(author.getEmail());
+        assertThat(postsResponses.get(1).getCreatedAt()).isEqualTo(post1CreatedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
+        assertThat(postsResponses.get(1).getModifiedAt()).isEqualTo(post1ModifiedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
+        assertThat(postsResponses.get(1).getIsPublic()).isEqualTo(posts1.getIsPublic());
+        assertThat(postsResponses.get(1).getIsDeleted()).isEqualTo(posts1.getIsDeleted());
+        assertThat(postsResponses.get(1).getDeletedAt()).isEqualTo(posts1.getDeletedAt());
+        assertThat(postsResponses.get(1).getLikesCount()).isEqualTo(posts1.getLikesCount());
+        assertThat(postsResponses.get(1).getCommentsCount()).isEqualTo(posts1.getCommentsCount());
+        assertThat(postsResponses.get(1).getIsLiked()).isTrue();
     }
 
     @Test
@@ -319,5 +389,51 @@ public class PostsServiceTest {
         // throws IllegalArgumentException
         IllegalArgumentException e = assertThrows(IllegalArgumentException.class, () -> postsService.like(1L, author.getEmail()));
         assertThat(e.getMessage()).isEqualTo("이미 좋아요를 누른 게시글입니다.");
+    }
+
+    @Test
+    public void unlike() {
+        // given
+        Instant postCreatedAt = Instant.ofEpochMilli(1640995200000L);
+        Instant postModifiedAt = Instant.ofEpochMilli(1641081600000L);
+        int initialLikesCount = 1;
+        Posts posts = Posts.builder()
+                .id(1L)
+                .title("testTitle")
+                .content("testContent")
+                .author(author)
+                .createdAt(postCreatedAt)
+                .modifiedAt(postModifiedAt)
+                .isPublic(true)
+                .isDeleted(false)
+                .deletedAt(null)
+                .likesCount(initialLikesCount)
+                .commentsCount(0)
+                .build();
+        when(postsRepository.findById(1L)).thenReturn(Optional.of(posts));
+        when(postsRepository.save(any())).thenReturn(posts);
+        when(usersRepository.findByEmail(author.getEmail())).thenReturn(Optional.of(author));
+        when(likesService.unlike(LikesRequest.builder()
+                        .post(posts)
+                        .user(author)
+                        .build())).thenReturn(Optional.of(LikesResponse.builder()
+                .postId(posts.getId())
+                .userId(author.getId())
+                .build()));
+
+        // when
+        PostsResponse postsResponse = postsService.unlike(1L, author.getEmail());
+
+        // then
+        assertThat(postsResponse.getTitle()).isEqualTo(posts.getTitle());
+        assertThat(postsResponse.getContent()).isEqualTo(posts.getContent());
+        assertThat(postsResponse.getAuthor().getEmail()).isEqualTo(author.getEmail());
+        assertThat(postsResponse.getCreatedAt()).isEqualTo(postCreatedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
+        assertThat(postsResponse.getModifiedAt()).isEqualTo(postModifiedAt.atZone(ZoneId.systemDefault()).toLocalDateTime());
+        assertThat(postsResponse.getIsPublic()).isEqualTo(posts.getIsPublic());
+        assertThat(postsResponse.getIsDeleted()).isEqualTo(posts.getIsDeleted());
+        assertThat(postsResponse.getDeletedAt()).isEqualTo(posts.getDeletedAt());
+        assertThat(postsResponse.getLikesCount()).isEqualTo(0);
+        assertThat(postsResponse.getCommentsCount()).isEqualTo(posts.getCommentsCount());
     }
 }
